# distributed_sensor_simulation

./: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
include/communication/: Mqtt.h
include/platform/: Platform.h
include/process_manager/: ProcessManager.h  SensorSpawner.h
include/sensor/: ISensor.h  PressureSensor.h  TemperatureSensor.h  Utils.h
src/: main.cpp
src/platform/: Platform.cpp
src/process_manager/: ProcessManager.cpp  SensorSpawner.cpp
src/sensor/: PressureSensor.cpp  TemperatureSensor.cpp  pressure_sensor_main.cpp  temperature_sensor_main.cpp
